<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PFE_Android</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_in">SignIn</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="title_activity_welcome_user">WelcomeUser</string>
    <string name="title_activity_update_user">UpdateUser</string>
    <string name="title_activity_add_objectif">AddObjectif</string>
    <string name="title_activity_objectifs_list">ObjectifsList</string>
    <string name="title_activity_send_reclamation">SendReclamation</string>
    <string name="title_activity_sicknesses">Sicknesses</string>
    <string name="title_activity_welcome_admin">WelcomeAdmin</string>
    <string name="title_activity_update_admin">UpdateAdmin</string>
    <string name="title_activity_add_user">AddUser</string>
    <string name="title_activity_users_list">UsersList</string>
    <string name="title_activity_reclamations">Reclamations</string>
    <string name="title_activity_rules_list">RulesList</string>
    <string name="title_activity_add_rule">AddRule</string>
    <string name="title_activity_add_wickness">AddWickness</string>
    <string name="title_activity_wicknesses">Wicknesses</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_contact_us">ContactUs</string>
    
    
    <string name="button_signIn">sign In</string>
    <string name="button_signUp">sign Up</string>
    <string name="button_about">About</string>
    <string name="button_contactUs">Contact US</string>
    <string name="button_updateProfile">Update Profile</string>
    <string name="button_addObjectif">Add Objectif</string>
    <string name="button_showObjectifs">Show Objectifs</string>
    <string name="button_sendReclamations">Send Reclamation</string>
    <string name="button_showSicknesses">Show Sicknesses</string>
    <string name="button_update">Update</string>
    <string name="button_add">Add</string>
    <string name="button_send">Send</string>
    <string name="button_save">Save</string>
    <string name="button_addUser">add User</string>
    <string name="button_showUsers">Show Users</string>
    <string name="button_showReclamations">Show Reclamations</string>
    <string name="button_showRules">Show Rules</string>
    <string name="button_addRule">Add Rule</string>
    <string name="button_addWicknesses">Add Wicknesses</string>
    <string name="some_users">  Display and Filter some Users!</string>
    <string name="some_services">  Display and Filter some Services !</string>
    <string name="some_objectifs">  Display and Filter some Objectifs !</string>
    <string name="some_hint">  Type here to filter&#8230;</string>


</resources>
