<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvIsConnected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp"
        android:background="#FF0000"
        android:text="is connected? "
        android:textColor="#FFF"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/tvWelcomeAdmin"
        android:layout_width="272dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/updateProfile"
        android:layout_width="272dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_updateProfile" 
        android:onClick="updateProfile"/>

    <Button
        android:id="@+id/addUser"
        android:layout_width="272dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_addUser" 
        android:onClick="addUser"/>

    <Button
        android:id="@+id/usersList"
        android:layout_width="272dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_showUsers" 
        android:onClick="usersList"/>

    <Button
        android:id="@+id/addSicknesses"
        android:layout_width="272dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_addWicknesses" 
        android:onClick="addSicknesses"/>

    <Button
        android:id="@+id/sicknessesList"
        android:layout_width="272dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_showSicknesses" 
        android:onClick="sicknessesList"/>

    <Button
        android:id="@+id/showReclamations"
        android:layout_width="272dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_showReclamations"
        android:onClick="showReclamations"/>

    <Button
        android:id="@+id/addRule"
        android:layout_width="272dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_addRule" 
        android:onClick="addRule"/>

    <Button
        android:id="@+id/rulesList"
        android:layout_width="272dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_showRules" 
        android:onClick="rulesList"/>

</LinearLayout>